<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="defaultstreamname">#DefaultStreamName</string>
    <string name="expand_indicator">Expand indicator</string>
    <string name="defaulttopicname">DefaultTopicName</string>
    <string name="_0">0</string>
    <string name="mes">mes</string>
    <string name="fab_description">Create new channel</string>
    <string name="search_channel">Search channel</string>
    <string name="back_to_channels">Back to channels</string>
    <string name="create_new_channel">Create new channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Введите название стрима</string>
    <string name="channel_description">Введите описание стрима</string>
    <string name="create_channel">Create channel</string>
    <string name="has_public_history">Has public history</string>
</resources>